force-app/main/default/objects/Action_Plan_Item__c/Action_Plan_Item__c.object-meta.xml
<CustomObject>
    <label>Action Plan Item</label>
    <nameField>
        <displayFormat>API-{00000000}</displayFormat>
        <label>Action Plan Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action Plan Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>