force-app/main/default/objects/Action_Plan_Item__c/fields/Action_Plan__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Action Plan</label>
    <referenceTo>Action_Plan__c</referenceTo>
    <relationshipLabel>Action Plan Items</relationshipLabel>
    <relationshipName>Action_Plan_Items</relationshipName>
    <type>Lookup</type>
</CustomField>